Enhance HTTP resume logic and add tests for ETag and response metadata handling